01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: isgood
  labels:
    name: isgood
