04-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  defaultBackend:
    service:
      name: backend-srv
      port:
        number: 8080
  rules:
  - host: backend-ingress
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: backend-srv
            port:
              number: 8080
