07-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    name: frontend-ingress
spec:
  rules:
  - host: frontend.isgood
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-srv
            port: 
              number: 8090
